# crewAI-examples-streamlit

.devcontainer/: devcontainer.json
screenplayst/: README.md
screenplayst/screenplayst/: screenplay_st.py
sp_app/: README.md  pyproject.toml  requirements.txt  spst.py  style.css
sp_app/screenplayst/: requirements.txt  screenplay_st.py
