[tool.poetry]
name = "screenplayst"
version = "0.1.0"
description = ""
authors = ["Jake Maymar <info@maymardesign.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
crewai = "^0.11.0"
langchain-groq = "0.1.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
